--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
         <guava.version>30.1-jre</guava.version>
         <feign-reactor.version>3.0.0</feign-reactor.version>
         <micrometer.version>1.7.3</micrometer.version>
+        <zipkin-brave.version>5.13.3</zipkin-brave.version>
     </properties>
 
     <dependencyManagement>
@@ -85,6 +86,14 @@
                 <version>${feign-reactor.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>io.zipkin.brave</groupId>
+                <artifactId>brave-bom</artifactId>
+                <version>${zipkin-brave.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
             </dependency>
         </dependencies>
     </dependencyManagement>
