新增prometheus controller, 支持broker scrape rsocket服务实例

--- a/kin-rsocket-service/pom.xml
+++ b/kin-rsocket-service/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>spring-context</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
         <!-- zipkin -->
         <dependency>
             <groupId>io.zipkin.brave</groupId>
