--- a/kin-rsocket-auth/kin-rsocket-auth-api/pom.xml
+++ b/kin-rsocket-auth/kin-rsocket-auth-api/pom.xml
@@ -10,4 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>kin-rsocket-auth-api</artifactId>
     <packaging>jar</packaging>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+    </dependencies>
 </project>
