--- a/kin-rsocket-example/pom.xml
+++ b/kin-rsocket-example/pom.xml
@@ -16,6 +16,7 @@
         <module>kin-rsocket-example-api</module>
         <module>kin-rsocket-example-broker</module>
         <module>kin-rsocket-example-springcloud</module>
+        <module>kin-spring-rsocket-example-requester</module>
     </modules>
 
 </project>
