spring rsocket support, 简化spring rsocket使用

--- a/kin-rsocket-example/pom.xml
+++ b/kin-rsocket-example/pom.xml
@@ -17,6 +17,8 @@
         <module>kin-rsocket-example-broker</module>
         <module>kin-rsocket-example-springcloud</module>
         <module>kin-spring-rsocket-example-requester</module>
+        <module>kin-spring-rsocket-example-responder</module>
+        <module>kin-spring-rsocket-example-api</module>
     </modules>
 
 </project>
