--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>kin-rsocket-bom</module>
         <module>kin-rsocket-cloud-function-starter</module>
         <module>kin-rsocket-broker-discovery-starter</module>
+        <module>kin-spring-rsocket-support-starter</module>
     </modules>
     <packaging>pom</packaging>
 
