引入kin-transport-netty-utils依赖, 替换掉原有的变长整形工具类

--- a/kin-rsocket-core/pom.xml
+++ b/kin-rsocket-core/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>kin-framework-java</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.kin</groupId>
+            <artifactId>kin-transport-netty-utils</artifactId>
+            <version>${kin-transport-netty-utils.version}</version>
+        </dependency>
+
         <!-- codec -->
         <dependency>
             <groupId>org.kin</groupId>
