--- a/kin-rsocket-example/kin-spring-rsocket-example-responder/pom.xml
+++ b/kin-rsocket-example/kin-spring-rsocket-example-responder/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>kin-rsocket-example</artifactId>
         <groupId>org.kin</groupId>
-        <version>0.1.0.0</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>kin-spring-rsocket-example-responder</artifactId>
