--- a/kin-rsocket-example/kin-rsocket-example-broker/src/main/resources/application.yml
+++ b/kin-rsocket-example/kin-rsocket-example-broker/src/main/resources/application.yml
@@ -9,7 +9,7 @@ kin:
     broker:
       port: 9999
       auth: false
-      route: consistentHash
+      router: consistentHash
 
 # management
 management:
