rsocket upstream requester支持配置负载均衡策略

--- a/kin-rsocket-broker/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/kin-rsocket-broker/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -76,6 +76,13 @@
       "description": "rsocket broker consumer请求路由规则",
       "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties",
       "defaultValue": "random roundRobin"
+    },
+    {
+      "name": "kin.rsocket.broker.upstreamLoadBalance",
+      "type": "java.lang.String",
+      "description": "针对其余broker集群的loadbalance策略",
+      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties",
+      "defaultValue": "random"
     }
   ]
 }
