--- a/kin-rsocket-broker-discovery-starter/pom.xml
+++ b/kin-rsocket-broker-discovery-starter/pom.xml
@@ -18,6 +18,12 @@
             <artifactId>kin-rsocket-broker</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
