--- a/kin-rsocket-broker-gossip-starter/pom.xml
+++ b/kin-rsocket-broker-gossip-starter/pom.xml
@@ -28,6 +28,12 @@
             <groupId>io.scalecube</groupId>
             <artifactId>scalecube-codec-jackson</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
