--- a/kin-rsocket-broker/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/kin-rsocket-broker/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -1,88 +1,97 @@
 {
-  "properties": [
+  "groups": [
     {
-      "name": "kin.rsocket.broker.port",
-      "type": "java.lang.Integer",
-      "description": "rsocket broker绑定端口",
-      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties",
-      "defaultValue": "9999"
+      "name": "kin.rsocket.broker",
+      "type": "org.kin.rsocket.broker.RSocketBrokerProperties",
+      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties"
     },
+    {
+      "name": "kin.rsocket.broker.ssl",
+      "type": "org.kin.rsocket.broker.RSocketBrokerProperties$RSocketSSL",
+      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties",
+      "sourceMethod": "getSsl()"
+    }
+  ],
+  "properties": [
     {
       "name": "kin.rsocket.broker.auth",
       "type": "java.lang.Boolean",
-      "description": "rsocket broker是否对request进行权限校验",
+      "description": "是否需要权限校验",
       "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties",
-      "defaultValue": "true"
+      "defaultValue": true
     },
     {
-      "name": "kin.rsocket.broker.authDir",
+      "name": "kin.rsocket.broker.auth-dir",
       "type": "java.lang.String",
-      "description": "rsocket broker校验token文件目录",
+      "description": "校验token文件",
       "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties",
-      "defaultValue": "{user.home}/.rsocket/"
+      "defaultValue": ".rsocket"
     },
     {
-      "name": "kin.rsocket.broker.externalDomain",
+      "name": "kin.rsocket.broker.external-domain",
       "type": "java.lang.String",
-      "description": "external domain for requester from external",
+      "description": "external domain for requester from external: the requester can not access broker's internal ip",
       "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties",
       "defaultValue": ""
     },
     {
-      "name": "kin.rsocket.broker.upstreamBrokers",
-      "type": "java.util.List<java.lang.String>",
-      "description": "remote rsocket broker uris",
+      "name": "kin.rsocket.broker.port",
+      "type": "java.lang.Integer",
+      "description": "监听端口",
       "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties",
-      "defaultValue": ""
+      "defaultValue": 9999
     },
     {
-      "name": "kin.rsocket.broker.upstreamToken",
-      "type": "java.lang.Boolean",
-      "description": "remote rsocket broker token, 支持文件路径配置",
-      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties",
-      "defaultValue": ""
+      "name": "kin.rsocket.broker.route",
+      "type": "java.lang.String",
+      "description": "broker 路由规则",
+      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties"
     },
     {
       "name": "kin.rsocket.broker.ssl.enabled",
       "type": "java.lang.Boolean",
-      "description": "是否开启rsocket broker connection ssl",
-      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties",
-      "defaultValue": "false"
+      "description": "是否开启tcp ssl",
+      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties$RSocketSSL",
+      "defaultValue": false
     },
     {
-      "name": "kin.rsocket.broker.ssl.keyStoreType",
+      "name": "kin.rsocket.broker.ssl.key-store",
       "type": "java.lang.String",
-      "description": "rsocket broker connection ssl key store type",
-      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties",
-      "defaultValue": "PKCS12"
+      "description": "key store路径",
+      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties$RSocketSSL"
     },
     {
-      "name": "kin.rsocket.broker.ssl.keyStore",
+      "name": "kin.rsocket.broker.ssl.key-store-password",
       "type": "java.lang.String",
-      "description": "rsocket broker connection ssl key store文件",
-      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties",
-      "defaultValue": "{user.home}/.rsocket/rsocket.p12"
-    },
-    {
-      "name": "kin.rsocket.broker.ssl.keyStorePassword",
-      "type": "java.lang.String",
-      "description": "rsocket broker connection ssl key store password",
-      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties",
+      "description": "默认key store密钥密码",
+      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties$RSocketSSL",
       "defaultValue": "kin"
     },
     {
-      "name": "kin.rsocket.broker.router",
+      "name": "kin.rsocket.broker.ssl.key-store-type",
       "type": "java.lang.String",
-      "description": "rsocket broker consumer请求路由规则",
-      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties",
-      "defaultValue": "random roundRobin"
+      "description": "密钥类型",
+      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties$RSocketSSL",
+      "defaultValue": "PKCS12"
     },
     {
-      "name": "kin.rsocket.broker.upstreamLoadBalance",
+      "name": "kin.rsocket.broker.upstream-brokers",
+      "type": "java.util.List<java.lang.String>",
+      "description": "upstream broker url",
+      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties"
+    },
+    {
+      "name": "kin.rsocket.broker.upstream-load-balance",
       "type": "java.lang.String",
-      "description": "针对其余broker集群的loadbalance策略",
-      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties",
-      "defaultValue": "random"
+      "description": "针对其余broker集群的loadbalance策略 @see org.kin.rsocket.core.upstream.loadbalance.UpstreamLoadBalance",
+      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties"
+    },
+    {
+      "name": "kin.rsocket.broker.upstream-token",
+      "type": "java.lang.String",
+      "description": "upstream token 支持文件路径配置 目前仅仅支持jwt",
+      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties"
     }
-  ]
+  ],
+  "hints": []
 }
