--- a/kin-rsocket-service-conf-client-starter/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/kin-rsocket-service-conf-client-starter/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -1,11 +1,19 @@
 {
+  "groups": [
+    {
+      "name": "kin.rsocket.conf",
+      "type": "org.kin.rsocket.spingcloud.conf.client.RSocketServiceConfProperties",
+      "sourceType": "org.kin.rsocket.spingcloud.conf.client.RSocketServiceConfProperties"
+    }
+  ],
   "properties": [
     {
       "name": "kin.rsocket.conf.auto-refresh",
       "type": "java.lang.Boolean",
-      "description": "rsocket service是否支持自动动态刷新配置",
+      "description": "自动刷新配置",
       "sourceType": "org.kin.rsocket.spingcloud.conf.client.RSocketServiceConfProperties",
-      "defaultValue": "false"
+      "defaultValue": false
     }
-  ]
+  ],
+  "hints": []
 }
