--- a/kin-rsocket-service-starter/pom.xml
+++ b/kin-rsocket-service-starter/pom.xml
@@ -28,5 +28,11 @@
             <groupId>io.zipkin.brave</groupId>
             <artifactId>brave</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 </project>
