--- a/kin-rsocket-service-starter/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/kin-rsocket-service-starter/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -1,81 +1,86 @@
 {
+  "groups": [
+    {
+      "name": "kin.rsocket",
+      "type": "org.kin.rsocket.springcloud.service.RSocketServiceProperties",
+      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties"
+    },
+    {
+      "name": "management.endpoint.rsocket",
+      "type": "org.kin.rsocket.springcloud.service.health.RSocketEndpoint",
+      "sourceType": "org.kin.rsocket.springcloud.service.health.RSocketEndpoint"
+    }
+  ],
   "properties": [
-    {
-      "name": "kin.rsocket.schema",
-      "type": "java.lang.String",
-      "description": "rsocket连接类型",
-      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties",
-      "defaultValue": "tcp"
-    },
-    {
-      "name": "kin.rsocket.port",
-      "type": "java.lang.Integer",
-      "description": "rsocket server绑定端口",
-      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties",
-      "defaultValue": "9998"
-    },
     {
       "name": "kin.rsocket.brokers",
       "type": "java.util.List<java.lang.String>",
-      "description": "remote rsocket broker uris, 如果需要支持配置刷新, 则需定义在bootstrap.yml",
-      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties",
-      "defaultValue": "tcp://0.0.0.0:9999"
-    },
-    {
-      "name": "kin.rsocket.topology",
-      "type": "java.lang.String",
-      "description": "rsocket service topology类型",
-      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties",
-      "defaultValue": "intranet"
-    },
-    {
-      "name": "kin.rsocket.metadata",
-      "type": "java.util.Map<java.lang.String, java.lang.String>",
-      "description": "rsocket service应用元数据",
-      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties",
-      "defaultValue": ""
-    },
-    {
-      "name": "kin.rsocket.group",
-      "type": "java.lang.String",
-      "description": "rsocket service所属组",
-      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties",
-      "defaultValue": ""
-    },
-    {
-      "name": "kin.rsocket.version",
-      "type": "java.lang.String",
-      "description": "rsocket service版本",
-      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties",
-      "defaultValue": ""
-    },
-    {
-      "name": "kin.rsocket.jwtToken",
-      "type": "java.lang.String",
-      "description": "rsocket service应用持有的jwt token, 用于broker校验; 支持文件路径配置, 如果需要支持配置刷新, 则需定义在bootstrap.yml",
-      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties",
-      "defaultValue": ""
-    },
-    {
-      "name": "kin.rsocket.timeout",
-      "type": "java.lang.Integer",
-      "description": "rsocket service call timeout",
-      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties",
-      "defaultValue": "3000"
+      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties"
     },
     {
       "name": "kin.rsocket.endpoints",
       "type": "java.util.List<org.kin.rsocket.service.EndpointProperties>",
-      "description": "remote rsocket endpoint信息配置",
-      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties",
-      "defaultValue": ""
+      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties"
     },
     {
-      "name": "kin.rsocket.loadBalance",
+      "name": "kin.rsocket.group",
       "type": "java.lang.String",
-      "description": "upstream broker/p2p rsocket service的loadbalance策略",
-      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties",
-      "defaultValue": "roundRobin"
+      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties"
+    },
+    {
+      "name": "kin.rsocket.jwt-token",
+      "type": "java.lang.String",
+      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties"
+    },
+    {
+      "name": "kin.rsocket.load-balance",
+      "type": "java.lang.String",
+      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties"
+    },
+    {
+      "name": "kin.rsocket.metadata",
+      "type": "java.util.Map<java.lang.String,java.lang.String>",
+      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties"
+    },
+    {
+      "name": "kin.rsocket.port",
+      "type": "java.lang.Integer",
+      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties"
+    },
+    {
+      "name": "kin.rsocket.schema",
+      "type": "java.lang.String",
+      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties"
+    },
+    {
+      "name": "kin.rsocket.timeout",
+      "type": "java.lang.Integer",
+      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties"
+    },
+    {
+      "name": "kin.rsocket.topology",
+      "type": "java.lang.String",
+      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties"
+    },
+    {
+      "name": "kin.rsocket.version",
+      "type": "java.lang.String",
+      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties"
+    },
+    {
+      "name": "management.endpoint.rsocket.cache.time-to-live",
+      "type": "java.time.Duration",
+      "description": "Maximum time that a response can be cached.",
+      "sourceType": "org.kin.rsocket.springcloud.service.health.RSocketEndpoint",
+      "defaultValue": "0ms"
+    },
+    {
+      "name": "management.endpoint.rsocket.enabled",
+      "type": "java.lang.Boolean",
+      "description": "Whether to enable the rsocket endpoint.",
+      "sourceType": "org.kin.rsocket.springcloud.service.health.RSocketEndpoint",
+      "defaultValue": true
     }
-  ]
+  ],
+  "hints": []
 }
