--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>kin-rsocket-cloud-function-starter</module>
         <module>kin-rsocket-broker-discovery-starter</module>
         <module>kin-spring-rsocket-support-starter</module>
+        <module>kin-rsocket-gateway-grpc-starter</module>
     </modules>
     <packaging>pom</packaging>
 
