--- a/kin-rsocket-broker-discovery-starter/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/kin-rsocket-broker-discovery-starter/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -1,18 +1,25 @@
 {
+  "groups": [
+    {
+      "name": "kin.rsocket.broker.k8s",
+      "type": "org.kin.rsocket.springcloud.broker.cluster.discovery.RSocketBrokerDiscoveryProperties",
+      "sourceType": "org.kin.rsocket.springcloud.broker.cluster.discovery.RSocketBrokerDiscoveryProperties"
+    }
+  ],
   "properties": [
     {
-      "name": "kin.rsocket.broker.k8s.serviceName",
-      "type": "java.lang.String",
-      "description": "spring cloud k8s服务实例名",
+      "name": "kin.rsocket.broker.k8s.refresh-internal",
+      "type": "java.lang.Integer",
+      "description": "集群broker信息刷新间隔",
       "sourceType": "org.kin.rsocket.springcloud.broker.cluster.discovery.RSocketBrokerDiscoveryProperties",
-      "defaultValue": "rsocket-broker"
+      "defaultValue": 0
     },
     {
-      "name": "kin.rsocket.broker.k8s.refreshInternal",
-      "type": "java.lang.Integer",
-      "description": "集群broker信息刷新间隔(秒)",
-      "sourceType": "org.kin.rsocket.springcloud.broker.cluster.discovery.RSocketBrokerDiscoveryProperties",
-      "defaultValue": "5"
+      "name": "kin.rsocket.broker.k8s.service",
+      "type": "java.lang.String",
+      "description": "spring cloud k8s服务实例名",
+      "sourceType": "org.kin.rsocket.springcloud.broker.cluster.discovery.RSocketBrokerDiscoveryProperties"
     }
-  ]
+  ],
+  "hints": []
 }
