--- a/kin-rsocket-conf/kin-rsocket-conf-h2-starter/pom.xml
+++ b/kin-rsocket-conf/kin-rsocket-conf-h2-starter/pom.xml
@@ -22,6 +22,12 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
