broker ProviderRouter新增支持基于预测响应时间的加权选择路由算法

--- a/kin-rsocket-example/kin-rsocket-example-broker/src/main/resources/application.yml
+++ b/kin-rsocket-example/kin-rsocket-example-broker/src/main/resources/application.yml
@@ -9,7 +9,7 @@ kin:
     broker:
       port: 9999
       auth: false
-      router: consistentHash
+      router: weightedStats
 
 # management
 management:
