--- a/kin-rsocket-example/pom.xml
+++ b/kin-rsocket-example/pom.xml
@@ -19,6 +19,7 @@
         <module>kin-spring-rsocket-example-requester</module>
         <module>kin-spring-rsocket-example-responder</module>
         <module>kin-spring-rsocket-example-api</module>
+        <module>kin-rsocket-example-grpc-gateway</module>
     </modules>
 
 </project>
