--- a/kin-rsocket-broker-dependencies/pom.xml
+++ b/kin-rsocket-broker-dependencies/pom.xml
@@ -22,7 +22,6 @@
         <cloudevents.version>2.0.0.RC2</cloudevents.version>
         <java-jwt.version>3.12.1</java-jwt.version>
         <scalecube-cluster.version>2.6.9</scalecube-cluster.version>
-        <kin-rpc.version>0.2.0.0</kin-rpc.version>
         <byte-buddy.version>1.10.18</byte-buddy.version>
         <guava.version>30.1-jre</guava.version>
         <feign-reactor.version>3.0.0</feign-reactor.version>
@@ -31,6 +30,7 @@
         <grpc.version>1.39.0</grpc.version>
         <reactive-grpc.version>1.1.0</reactive-grpc.version>
         <grpc-spring-boot-starter.version>4.5.5</grpc-spring-boot-starter.version>
+        <kin-serialization.version>0.1.0.0</kin-serialization.version>
     </properties>
 
     <dependencyManagement>
@@ -127,8 +127,8 @@
 
             <dependency>
                 <groupId>org.kin</groupId>
-                <artifactId>kin-rpc-bom</artifactId>
-                <version>${kin-rpc.version}</version>
+                <artifactId>kin-serialization-bom</artifactId>
+                <version>${kin-serialization.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
