--- a/kin-rsocket-service/pom.xml
+++ b/kin-rsocket-service/pom.xml
@@ -8,7 +8,7 @@
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>`kin-rsocket-service`</artifactId>
+    <artifactId>kin-rsocket-service</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
