--- a/kin-rsocket-example/kin-spring-rsocket-example-requester/src/main/resources/application.yml
+++ b/kin-rsocket-example/kin-spring-rsocket-example-requester/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 spring:
   application:
-    name: spring-rsocket-responder
+    name: spring-rsocket-requester
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+
 server:
   port: 8089
 
