--- a/kin-rsocket-example/pom.xml
+++ b/kin-rsocket-example/pom.xml
@@ -23,4 +23,20 @@
         <module>kin-rsocket-example-grpc-requester</module>
     </modules>
 
+    <properties>
+        <spring-cloud-alibaba.version>2021.1</spring-cloud-alibaba.version>
+    </properties>
+
+    <!-- 仅用于测试, 所以没有放入dependencies模块里面 -->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${spring-cloud-alibaba.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
