--- a/kin-rsocket-example/kin-rsocket-example-broker/pom.xml
+++ b/kin-rsocket-example/kin-rsocket-example-broker/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>kin-rsocket-conf-memory-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <!--        <dependency>-->
+        <!--            <groupId>com.alibaba.cloud</groupId>-->
+        <!--            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>-->
+        <!--        </dependency>-->
     </dependencies>
 
 </project>
