--- a/kin-rsocket-example/kin-spring-rsocket-example-requester/pom.xml
+++ b/kin-rsocket-example/kin-spring-rsocket-example-requester/pom.xml
@@ -27,6 +27,12 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
+
+        <!--        <dependency>-->
+        <!--            <groupId>org.kin</groupId>-->
+        <!--            <artifactId>kin-rsocket-core</artifactId>-->
+        <!--            <version>${project.version}</version>-->
+        <!--        </dependency>-->
     </dependencies>
 
 </project>
