将配置中心从broker移除

--- a/kin-rsocket-bom/pom.xml
+++ b/kin-rsocket-bom/pom.xml
@@ -69,6 +69,12 @@
 
             <dependency>
                 <groupId>org.kin</groupId>
+                <artifactId>kin-rsocket-conf-server-starter</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.kin</groupId>
                 <artifactId>kin-rsocket-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
