--- a/kin-rsocket-example/pom.xml
+++ b/kin-rsocket-example/pom.xml
@@ -21,6 +21,7 @@
         <module>kin-spring-rsocket-example-api</module>
         <module>kin-rsocket-example-grpc-gateway</module>
         <module>kin-rsocket-example-grpc-requester</module>
+        <module>kin-rsocket-example-conf-server-service</module>
     </modules>
 
     <properties>
