--- a/kin-rsocket-service-starter/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/kin-rsocket-service-starter/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -13,6 +13,11 @@
   ],
   "properties": [
     {
+      "name": "kin.rsocket.broker-web-host-ports",
+      "type": "java.util.List<java.lang.String>",
+      "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties"
+    },
+    {
       "name": "kin.rsocket.brokers",
       "type": "java.util.List<java.lang.String>",
       "sourceType": "org.kin.rsocket.springcloud.service.RSocketServiceProperties"
