--- a/kin-rsocket-example/kin-rsocket-example-responder/pom.xml
+++ b/kin-rsocket-example/kin-rsocket-example-responder/pom.xml
@@ -17,11 +17,11 @@
             <version>${project.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.kin</groupId>
-            <artifactId>kin-rsocket-service-conf-client-starter</artifactId>
-            <version>${project.version}</version>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.kin</groupId>-->
+        <!--            <artifactId>kin-rsocket-service-conf-client-starter</artifactId>-->
+        <!--            <version>${project.version}</version>-->
+        <!--        </dependency>-->
 
         <!-- byte buddy(基于ASM) -->
         <dependency>
@@ -33,6 +33,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
     </dependencies>
 
