--- a/kin-rsocket-example/kin-rsocket-example-grpc-gateway/pom.xml
+++ b/kin-rsocket-example/kin-rsocket-example-grpc-gateway/pom.xml
@@ -48,7 +48,8 @@
                     <protocArtifact>com.google.protobuf:protoc:${protobuf-java.version}:exe:${os.detected.classifier}
                     </protocArtifact>
                     <pluginId>grpc-java</pluginId>
-                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
+                    <pluginArtifact>
+                        io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
                     </pluginArtifact>
                     <protocPlugins>
                         <protocPlugin>
